maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  {gauche(); if (!estFaceMur()) {droite(); return true}
                                                  ^Escaper:27: warning: enclosing method murAGauche has result type Unit: return value discarded
  {gauche(); if (!estFaceMur()) {droite(); return true}
                                           ^Escaper:28: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  					 else {droite(); return false}}
                                                                ^Escaper:28: warning: enclosing method murAGauche has result type Unit: return value discarded
  					 else {droite(); return false}}
                                                         ^Escaper:31: error: value unary_! is not a member of Unit
  while (!murAGauche())
         ^Escaper:32: error: not found: value random3
  	{var alea : Int = random3()
                          ^